--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,12 @@ body {
 
 @font-face {
     font-family: "TheklaBlondExtended";
-    src: url(../content/tipografia/) format("truetype");
+    src: url(../content/tipografia/TheklaBoldExtended.ttf) format("truetype");
 }
 
 .formulario {
     background-color: rgba(236, 236, 236, 0.55);
-    width: 290px;
+    width: 300px;
     overflow: visible;
 }
 
